super faker
actually im cooler

- removed brute force culling mod
- added no telemetry mod
- removed terralith startup msg
- fixed modpack startup msg in singleplayer
- added funny jvm arguments to instance.cfg & server's run.bat/sh